# FastBargaining

./: .gitignore  01. UnitaryHousehold.ipynb  02. LimitedCommmitmentModel.ipynb  03. Application.ipynb  README.md  UnitaryModel.py  environment.yml  figure_manager.py  iEGM_pre.tex  pyproject.toml  requirements.txt
Appendix/: Illustrate bargaining algo.ipynb  figure_manager.py
Application/: 01. Application Test.ipynb  01. Calibration.ipynb  02. Calibrate model tests.ipynb  02. Calibrate model.ipynb  03. Application.ipynb  03. Timings.ipynb  04. Counterfactuals.ipynb  04. Counterfactuals_types.ipynb  05. Timings.ipynb  DynamicTimeAllocationModel.py  LimitedCommitmentModel.py  Precomputation_iEGM.ipynb  error_log.txt  figure_manager.py  inverse_log.txt  par_dict.pkl  plots.py
Application/calibrate/: draw.py  parameter_search.txt  sobol.py
Application/cppfuncs/: bargaining.cpp  couple.cpp  index.cpp  myheader.h  par_struct.cpp  precompute.cpp  sim_struct.cpp  simulate.cpp  single.cpp  sol_struct.cpp  solve.cpp  tools.cpp  utils.cpp
Application/output/: MC_limited.tex
Application/par_files/: calibrated_par.npz
Archive/buffer_stock/: BufferStockModel.ipynb
Archive/limited_commitment/: LimitedCommmitmentModel.ipynb
Archive/limited_commitment/cppfuncs/: index.cpp  (+2 more)
Illustration/: 01. UnitaryHousehold copy.ipynb  01. UnitaryHousehold.ipynb  InterpolationFunctions.py  UnitaryModel.py
Illustration/output/: MC_unitary.tex  MC_unitary_pre.tex
cppfuncs/: couple.cpp  simulate_disc.cpp
cppfuncs/nlopt-2.4.2-dll64/: libnlopt-0.exp
output/: MC_timing.pkl  MC_util.pkl
(+1 files in other folders)
